# devloop

./: .gitignore  README.md  devloop.example.yaml  pyproject.toml  requirements.txt
devloop/: __init__.py  __main__.py  cli.py  clipboard.py  config.py  detector.py  errors.py  git_tools.py  patch_apply.py  prompt_builder.py  protocol.py  retrieval.py  runlog.py  session.py  yaml_compat.py
devloop/parsers/: __init__.py  sbt_compile.py  sbt_test.py
devloop/templates/: __init__.py  context_prompt.txt  protocol_prompt.txt  protocol_reference.txt  protocol_rules.txt
tests/: test_cli.py  test_clipboard.py  test_config.py  test_detector.py  test_patch_apply.py  test_patch_apply_search_replace.py  test_prompt_builder.py  test_protocol.py  test_protocol_search_replace.py  test_retrieval.py  test_runlog.py  test_sbt_compile.py  test_sbt_test.py  test_session.py
